REGRESSION(r74107): Including svg format in @font-face rules makes Web Fonts fail to load https://bugs.webkit.org/show_bug.cgi?id=57766 <rdar://problem/9232183>

Reviewed by Oliver Hunt.

Source/WebCore:

Move the knowledge of whether to interpret a font as SVG from CachedFont to CSSFontFaceSource. This way
we can try to interpret the same cached resource in multiple ways.

Test: fast/css/font-face-repeated-url.html

* css/CSSFontFaceSource.cpp:
(WebCore::CSSFontFaceSource::CSSFontFaceSource):
(WebCore::CSSFontFaceSource::getFontData):
* css/CSSFontFaceSource.h:
(WebCore::CSSFontFaceSource::setHasExternalSVGFont):
* css/CSSFontSelector.cpp:
(WebCore::CSSFontSelector::addFontFaceRule):
* loader/cache/CachedFont.cpp:
(WebCore::CachedFont::CachedFont):
(WebCore::CachedFont::ensureCustomFontData):
(WebCore::CachedFont::ensureSVGFontData):

    Use TextResourceDecoder correctly.

(WebCore::CachedFont::getSVGFontById):
* loader/cache/CachedFont.h:
* svg/SVGFontFaceUriElement.cpp:
(WebCore::SVGFontFaceUriElement::loadFont):

LayoutTests:

* fast/css/font-face-repeated-url-expected.txt: Added.
* fast/css/font-face-repeated-url.html: Added.



Canonical link: https://commits.webkit.org/73651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83896 268f45cc-cd09-0410-ab3c-d52691b4dbfc