Source/WebCore/loader/cache/CachedFont.h
@@ -68,8 +68,6 @@ public:
     FontPlatformData platformDataFromCustomData(float size, bool bold, bool italic, FontOrientation = Horizontal, TextOrientation = TextOrientationVerticalRight, FontWidthVariant = RegularWidth, FontRenderingMode = NormalRenderingMode);
 
 #if ENABLE(SVG_FONTS)
-    bool isSVGFont() const { return m_isSVGFont; }
-    void setSVGFont(bool isSVG) { m_isSVGFont = isSVG; }
     bool ensureSVGFontData();
     SVGFontElement* getSVGFontById(const String&) const;
 #endif
@@ -79,7 +77,6 @@ private:
     bool m_loadInitiated;
 
 #if ENABLE(SVG_FONTS)
-    bool m_isSVGFont;
     RefPtr<SVGDocument> m_externalSVGDocument;
 #endif
 
